Nuew view about

--- a/demo/src/components/app-header/app-header.scss
+++ b/demo/src/components/app-header/app-header.scss
@@ -4,7 +4,8 @@
     background: $color-primary;
     color: $color-basic;
     padding: 0.7rem 0;
-
+    box-shadow: 0px 0px 26px -3px rgba(34,34,34,1);
+     
     h1 {
         margin: 0;
         padding: 0;
