--- a/demo/src/components/app-container/app-container.scss
+++ b/demo/src/components/app-container/app-container.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0.5rem 0;
 
     @media (min-width: $screen-md-min) {
         max-width: $screen-md-min;
